[gd_scene load_steps=2 format=3 uid="uid://mb2hcjn6b1ay"]

[ext_resource type="Script" path="res://Menus/Pause_Menu.gd" id="1_eu72k"]

[node name="Pause_Menu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_eu72k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="PanelContainer" parent="Control"]
modulate = Color(0, 0.921569, 0.929412, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -65.5
offset_right = 68.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="VBoxContainer" parent="Control/MainMenu"]
layout_mode = 2

[node name="PausedTag" type="Label" parent="Control/MainMenu/Main"]
layout_mode = 2
text = "   Game Paused   "
horizontal_alignment = 1
uppercase = true

[node name="Resume" type="Button" parent="Control/MainMenu/Main"]
layout_mode = 2
action_mode = 0
text = "Resume Game"

[node name="OptionsButton" type="Button" parent="Control/MainMenu/Main"]
layout_mode = 2
action_mode = 0
text = "Options"

[node name="Quit" type="Button" parent="Control/MainMenu/Main"]
layout_mode = 2
action_mode = 0
text = "Quit Game"

[node name="OptionsMenu" type="PanelContainer" parent="Control"]
visible = false
modulate = Color(0, 0.921569, 0.929412, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -73.0
offset_right = 70.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="VBoxContainer" parent="Control/OptionsMenu"]
layout_mode = 2

[node name="OptionsTag" type="Label" parent="Control/OptionsMenu/Options"]
layout_mode = 2
text = "  Options Menu  "
horizontal_alignment = 1
uppercase = true

[node name="VolumeTag" type="Label" parent="Control/OptionsMenu/Options"]
layout_mode = 2
text = " Volume   "
horizontal_alignment = 1
uppercase = true

[node name="VolumeSlider" type="HSlider" parent="Control/OptionsMenu/Options"]
layout_mode = 2

[node name="DebugMode" type="Button" parent="Control/OptionsMenu/Options"]
layout_mode = 2
toggle_mode = true
action_mode = 0
text = "Debug Mode"

[node name="Back" type="Button" parent="Control/OptionsMenu/Options"]
layout_mode = 2
action_mode = 0
text = "Back"

[connection signal="pressed" from="Control/MainMenu/Main/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MainMenu/Main/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/MainMenu/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Control/OptionsMenu/Options/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="Control/OptionsMenu/Options/DebugMode" to="." method="_on_debug_mode_toggled"]
[connection signal="pressed" from="Control/OptionsMenu/Options/Back" to="." method="_on_back_pressed"]
